car rental committed

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=bike
+DB_DATABASE=newcarrental
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -56,3 +56,18 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SETTINGS_COMPANY_NAME="Car Rental System"
+SETTINGS_COMPANY_ADDRESS="Your Company Address"
+SETTINGS_COMPANY_PHONE="+1234567890"
+SETTINGS_COMPANY_EMAIL="info@company.com"
+SETTINGS_COMPANY_WEBSITE=""
+SETTINGS_COMPANY_TAX_NUMBER="123456789"
+SETTINGS_COMPANY_COMMERCIAL_NUMBER="987654321"
+SETTINGS_INVOICE_PREFIX="INV-"
+SETTINGS_INVOICE_TAX_RATE="15"
+SETTINGS_INVOICE_FOOTER_TEXT="Thank you for your business!"
+SETTINGS_CURRENCY_SYMBOL="\$"
+SETTINGS_CURRENCY_CODE="USD"
+SETTINGS_CURRENCY_POSITION="before"
+SETTINGS_COMPANY_LOGO="settings/c6MHFINumFUqg49BDNWDngKWcOy1rKV3yxdk1yni.jpg"
