--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,18 @@
-
-/vendor/
-
-.idea/
-
-*.log
-
-.DS_Store
-Thumbs.db
-
-
+/.phpunit.cache
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
 .env
-
-
-.phpunit.result.cache
-
-
-/cache/
-*/cache/
-
-
-composer.lock
-
-
-.phpcs.xml
-.phpmd.xml
-
-
-*.swp
-*.swo
-*.bak
+.env.backup
+.env.production
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.vscode
