--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "laravelcollective/html": "^6.4",
-        "spatie/laravel-permission": "^6.9",
+        "spatie/laravel-permission": "*",
         "yajra/laravel-datatables-oracle": "^10.11"
     },
     "require-dev": {
